--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,12 @@
   font-display: swap;
 }
 
-html.light {
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+html {
   --color-text: #333333;
   --color-bg: #FFFFFF;
 }
@@ -24,15 +29,6 @@ html.light {
 html.dark {
   --color-text: #FFFFFF;
   --color-bg: #333333;
-}
-
-:root {
-
-}
-
-html {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
 }
 
 body {
@@ -44,6 +40,8 @@ body {
     font-weight: 400;
     font-size: 18px;
     line-height: 25px;
+    /* background-color: var(--color-bg);
+    color: var(--color-text); */
   }
 
 
@@ -85,6 +83,12 @@ ul {
   list-style-type: none;
 }
 
+.container {
+  padding: 0 200px;
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
 .title {
   margin-bottom: 10px;
 }
@@ -92,19 +96,14 @@ ul {
 .header {
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 100;
   padding: 10px 0;
   /* margin-bottom: 50px; */
   width: 100%;
-  background-color: #fff;
+  background-color: var(--color-bg);
   box-shadow: 0px 0px 5px 0px rgb(30, 180, 180);
 }
 
-.container {
-  padding: 0 200px;
-  max-width: 1920px;
-  margin: 0 auto;
-}
 
 .header__container {
   display: flex;
@@ -118,6 +117,26 @@ ul {
   height: 50px;
   margin-right: 50px;
   /* float: left; */
+}
+
+.theme-toggle {
+  margin-left: 20px;
+}
+
+.theme-icon {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  /* background-color: black; */
+  background-image: url('../img/dark.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.theme-icon.dark {
+  background-image: url('../img/light.svg');
 }
 
 .nav {
@@ -212,6 +231,7 @@ ul {
   border: 1px solid rgb(30, 180, 180);
   border-radius: 20px;
   transition: opacity .3s;
+  color: var(--color-text);
 }
 
 .furniture__button:hover {
@@ -222,7 +242,7 @@ ul {
   max-width: 500px;
   padding: 50px;
   z-index: 1;
-  background-color: white;
+  background-color: var(--color-bg);
   border-radius: 40px;
 }
 
@@ -258,7 +278,7 @@ ul {
   position: relative;
   width: 16px;
   height: 16px;
-  background-color: #fff;
+  background-color: var(--color-bg);
   border : 2px solid;
   border-radius: 50%;
 }
@@ -314,13 +334,13 @@ ul {
 
 .btn-up {
   position: fixed; /* фиксированная позиция */
-  background-color: rgb(30, 180, 180); /* цвет заднего фона */
-  right: 20px; /* расстояние от правого края */
-  bottom: 0px; /* расстояние от нижнего края */
-  border-top-left-radius: 8px; /* скругление верхнего левого угла */
-  border-top-right-radius: 8px; /* скругление верхнего правого угла */
-  cursor: pointer; /* форма курсора */
-  display: flex; /* не отображать элемент */
+  background-color: rgb(30, 180, 180);
+  right: 20px;
+  bottom: 0px;
+  border-top-left-radius: 8px; 
+  border-top-right-radius: 8px; 
+  cursor: pointer; 
+  display: flex; 
   align-items: center;
   justify-content: center;
   transition: opacity 0.3s ease-in-out;
