--- a/style/style.css
+++ b/style/style.css
@@ -32,7 +32,6 @@ html.dark {
 }
 
 body {
-  /* position: absolute; */
     min-width: 320px;
     font-family: 'Roboto', sans-serif;
     color: var(--color-text);
@@ -40,8 +39,6 @@ body {
     font-weight: 400;
     font-size: 18px;
     line-height: 25px;
-    /* background-color: var(--color-bg);
-    color: var(--color-text); */
   }
 
 
@@ -59,7 +56,6 @@ body {
 
 a {
   text-decoration: none;
-  /* color: var(--black); */
   color: inherit;
 }
 
@@ -98,7 +94,6 @@ ul {
   top: 0;
   z-index: 100;
   padding: 10px 0;
-  /* margin-bottom: 50px; */
   width: 100%;
   background-color: var(--color-bg);
   box-shadow: 0px 0px 5px 0px rgb(30, 180, 180);
@@ -112,11 +107,9 @@ ul {
 }
 
 .logo {
-  /* display: block; */
   width: 40px;
   height: 50px;
   margin-right: 50px;
-  /* float: left; */
 }
 
 .theme-toggle {
@@ -128,7 +121,6 @@ ul {
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  /* background-color: black; */
   background-image: url('../img/dark.svg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -140,7 +132,6 @@ ul {
 }
 
 .nav {
-  /* position: fixed; */
   width: 100%;
 }
 
@@ -172,7 +163,6 @@ ul {
 .furniture__list {
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: space-between; */
   width: 100%;
 }
 
@@ -181,27 +171,18 @@ ul {
   flex-direction: column;
   margin-bottom: 20px;
   width: calc(((100% / 4) - 45px / 4));
-  /* width: 200px; */
   margin-right: 15px;
-  /* width: 25%; */
 }
 
 .furniture__item:nth-child(4n) {
   margin-right: 0;
 }
 
-.furniture__item:last-child {
-  /* margin-right: auto; */
-}
-
-
 .furniture__pict {
   display: block;
   width: 100%;
-  /* width: 150px; */
   height: 100%;
   max-height: 150px;
-  /* height: auto; */
   overflow: hidden;
   border-radius: 30px;
   margin-bottom: 10px;
@@ -210,7 +191,6 @@ ul {
 .furniture__img {
   display: block;
   margin: auto;
-  /* width: 100%; */
   object-fit: cover;
   transition: transform .3s;
 }
@@ -248,7 +228,6 @@ ul {
 
 .wrap-form {
   position: fixed;
-  /* display: none; */
   opacity: 0;
   transform: scale(0);
   left: 0;
@@ -259,7 +238,6 @@ ul {
   background-color: rgba(0,0,0,.5);
   align-items: center;
   justify-content: center;
-  /* overflow-y: auto; */
   transition: all .3s;
 }
 
@@ -307,7 +285,6 @@ ul {
   content: '';
   width: 8px;
   height: 8px;
-  /* background-color: blue; */
   border-radius: 50%;
   top: 50%;
   left: 50%;
@@ -333,14 +310,14 @@ ul {
 }
 
 .btn-up {
-  position: fixed; /* фиксированная позиция */
+  position: fixed;
   background-color: rgb(30, 180, 180);
   right: 20px;
-  bottom: 0px;
-  border-top-left-radius: 8px; 
-  border-top-right-radius: 8px; 
-  cursor: pointer; 
-  display: flex; 
+  bottom: 50px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  cursor: pointer;
+  display: flex;
   align-items: center;
   justify-content: center;
   transition: opacity 0.3s ease-in-out;
@@ -368,6 +345,10 @@ ul {
 
 
   .btn-up:hover {
-    background-color: rgb(34, 230, 230); /* цвет заднего фона при наведении */
+    background-color: rgb(34, 230, 230);
+  }
+
+  footer {
+    padding-bottom: 20px;
   }
 
